--- a/Thanksgiving2009.html
+++ b/Thanksgiving2009.html
@@ -19,63 +19,63 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 2009
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266807 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266807.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266799 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266799.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266789 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266789.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266788_stitch (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266788_stitch.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266785 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266785.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266784 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266784.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266781 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266781.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266780 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266780.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266779 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266779.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266778 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266778.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266777 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266777.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266776 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266776.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266775 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266775.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266774 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266774.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266773 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266773.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266772 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266772.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266771 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266771.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266770 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266770.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266769 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266769.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266768 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266768.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266767 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266767.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266766 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266766.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266765 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266765.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266764 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266764.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266763 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266763.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266762 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266762.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266761 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266761.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266759 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266759.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266756 (Small).JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266756.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
 
 <center>The END!</center>
