--- a/Thanksgiving2009.html
+++ b/Thanksgiving2009.html
@@ -19,7 +19,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 2009
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2009/PB266807.JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2009/PB266807.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
 <p align=center><img src="Thanksgiving2009/PB266799.JPG" align="top"> <p align=center>
 <hr size=3 width=90%> 
