--- a/dave_0.html
+++ b/dave_0.html
@@ -1306,8 +1306,8 @@ Check out the ODOT District 9 Employee of the Month (August 97)</A>
 </TR>
 </TABLE>
 <p align=center>You are visitor number 
-<!-- Counter Code START --><script language="javascript" src="http://www.hitcounters.net/counter.php?id=5142&cmd=cookie"></script>
-<img src="http://www.hitcounters.net/counter.php?id=5142&cmd=img_only" alt="privatelife.com" border="0" ><br><a href="http://www.privatelife.com/" title="privatelife.com" target="_blank" style="color:990000; font: normal 05px arial, verdana, sans-serif;">privatelife.com</a><!-- Counter Code END -->
+
+<a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter7.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=n9sxgcu1kkwa86nwbdh7kqfue4ehd6hg" border="0" title="free hit counter" alt="free hit counter"></a>
 
 <p align="center"><span style="background-color: #FFFF00">Thank you for visiting my site!</span></p> 
 <!---- Remove the following before uploading --->
