--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="icon" type="image/ico" href="favicon.ico"></link>
    <link rel="shortcut icon" href="favicon.ico"></link>
 </head>
-<body <BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
+<body background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
 <p align=center>
 
 <!BODY onunload="clearTimeout(bannerid)" background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
