--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
    <link rel="icon" type="image/ico" href="favicon.ico"></link>
    <link rel="shortcut icon" href="favicon.ico"></link>
 </head>
-<body background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
+<body background="dnorris.net/Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
 <p align=center>
 
-<!BODY onunload="clearTimeout(bannerid)" background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
-
-<! --  EXAMPLE --! img src="Images/constru1.gif">
+<!--BODY onunload="clearTimeout(bannerid)" background="Images/bg-paper.gif" BGCOLOR="#A4C8F0"-->
+<!--  EXAMPLE --! img src="Images/constru1.gif"-->
 <!-- LAST MODIFIED DATE -->
 <p align=center>
 <SCRIPT LANGUAGE="JavaScript">
@@ -28,60 +27,59 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p><center>from Lucasville, Ohio <A HREF="http://dnorris.net/Cumulus/index.htm"> Dave's Weather station </A> </center></p>
 
 <center>
-<p>Bienvenue à mon Webpage! Recepción a mi Webpage! Boa vinda a meu Webpage!
+<p>Bienvenue ï¿½ mon Webpage! Recepciï¿½n a mi Webpage! Boa vinda a meu Webpage!
 <p>Benvenuto al mio Webpage! Willkommen zu meinem Webpage! Welcome to my Webpage!
 <p>
 Hello....My Name is <A href="dave.html">David </A> and I live in 
 <A href="Images/scioto.jpg">Southern Ohio </A> with
 my wife <A href="deb.html">Debra </A>, son <A href="daniel/daniel.html"> Daniel</A>, and dog <A href="buffy.html">Buffy</A>. 
 </p>
-<center><img src="Images/an-dogrun.gif" align=top alt="dogrun" ></center>
+<center><img src="Images/an-dogrun.gif" alt="dogrun" ></center>
 <p>
 See our <A href="ccf.html"> "adopted" children </A> 
 </p>
 
-<hr align=center color=red>
-<CENTER><!IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT=""></CENTER>
+<hr />
+<CENTER><!--IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT=""--></CENTER>
 
 <center><h2>OHIO STATE BUCKEYES <a href="http://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
-<center><img align=bottom alt="New!" src="Images/new3.gif">
+<center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
-<!......................................................................................................>
+<!--......................................................................................................-->
 
 <center><h1> 2019 </h1><br>
 <table border="1" align="center" >
 
-<table border="1" align="center" >
-<td>Aug  31</td><td><A href=""> Florida Atlantic </a> </td><td> Noon Fox  </td><td> W 45 - 21  </td><td> note </td></tr>
-<td>Sept 07</td><td><A href=""> Cincinnati       </a> </td><td> Noon ABC  </td><td> W 42 - 0  </td><td> note </td></tr>
-<td>Sept 14</td><td><A href=""> @ Indiana        </a> </td><td> Noon Fox  </td><td> W 51 - 10   </td><td> note </td></tr>
-<td>Sept 21</td><td><A href=""> Miaml (Ohio)     </a> </td><td> 3:30 BTN  </td><td> W 76 - 5  </td><td> note </td></tr>
-<td>Sept 28</td><td><A href=""> @ Nebraska  </a> </td><td> 7:30 7:30 ABC  </td><td> W 48 - 7   </td><td> note </td></tr>
-<td>Oct 05 </td><td><A href=""> Michigan State   </a> </td><td> 7:30 ABC  </td><td> W 34 - 10 </td><td> note </td></tr>
-<td>Oct 12 </td><td><A href=""> BYE              </a> </td><td> TBA       </td><td> .          </td><td> .    </td></tr>
-<td>Oct 19 </td><td><A href=""> @ Northwestern   </a> </td><td> 8:30 BTN  </td><td> W 52 - 3 </td><td> Friday </td></tr>
-<td>Oct 26 </td><td><A href=""> Wisconsin        </a> </td><td> Noon Fox  </td><td> W 38 - 7 </td><td> note </td></tr>
-<td>Nov 02 </td><td><A href=""> BYE              </a> </td><td> TBA       </td><td> .          </td><td> .    </td></tr>
-<td>Nov 09 </td><td><A href=""> Maryland         </a> </td><td> Noon Fox  </td><td> W 73 - 14 </td><td> note </td></tr>
-<td>Nov 16 </td><td><A href=""> @ Rutgers        </a> </td><td> 3:30 BTN  </td><td> W 56 - 21  </td><td> note </td></tr>
-<td>Nov 23 </td><td><A href=""> Penn State       </a> </td><td> Noon Fox  </td><td> W 28 - 17 </td><td> note </td></tr>
-<td>Nov 30 </td><td><A href=""> @ scUM           </a> </td><td> Noon Fox  </td><td> W 56 - 27 </td><td> note </td></tr>
-<td>Dec 07 </td><td><A href=""> Wisconsin (B1G Ch game)    </a> </td><td> 8:00 Fox  </td><td> W 34 - 21  </td><td> .    </td></tr>
+<tr><td>Aug  31</td><td> Florida Atlantic  </td><td> Noon Fox  </td><td> W 45 - 21  </td><td> note </td></tr>
+<tr><td>Sept 07</td><td> Cincinnati        </td><td> Noon ABC  </td><td> W 42 - 0  </td><td> note </td></tr>
+<tr><td>Sept 14</td><td> @ Indiana         </td><td> Noon Fox  </td><td> W 51 - 10   </td><td> note </td></tr>
+<tr><td>Sept 21</td><td> Miami (Ohio)      </td><td> 3:30 BTN  </td><td> W 76 - 5  </td><td> note </td></tr>
+<tr><td>Sept 28</td><td> @ Nebraska        </td><td> 7:30 ABC  </td><td> W 48 - 7   </td><td> note </td></tr>
+<tr><td>Oct 05 </td><td> Michigan State    </td><td> 7:30 ABC  </td><td> W 34 - 10 </td><td> note </td></tr>
+<tr><td>Oct 12 </td><td> BYE               </td><td> TBA       </td><td> .          </td><td> .    </td></tr>
+<tr><td>Oct 19 </td><td> @ Northwestern    </td><td> 8:30 BTN  </td><td> W 52 - 3 </td><td> Friday </td></tr>
+<tr><td>Oct 26 </td><td> Wisconsin         </td><td> Noon Fox  </td><td> W 38 - 7 </td><td> note </td></tr>
+<tr><td>Nov 02 </td><td> BYE               </td><td> TBA       </td><td> .          </td><td> .    </td></tr>
+<tr><td>Nov 09 </td><td> Maryland          </td><td> Noon Fox  </td><td> W 73 - 14 </td><td> note </td></tr>
+<tr><td>Nov 16 </td><td> @ Rutgers         </td><td> 3:30 BTN  </td><td> W 56 - 21  </td><td> note </td></tr>
+<tr><td>Nov 23 </td><td> Penn State        </td><td> Noon Fox  </td><td> W 28 - 17 </td><td> note </td></tr>
+<tr><td>Nov 30 </td><td> @ scUM            </td><td> Noon Fox  </td><td> W 56 - 27 </td><td> note </td></tr>
+<tr><td>Dec 07 </td><td> Wisconsin (B1G Ch game)     </td><td> 8:00 Fox  </td><td> W 34 - 21  </td><td> .    </td></tr>
 
-</table>
-<center><h2>Dec 28, 2019  CFP Fiesta Bowl vs. Clemson: 8:00 ESPN  <font color=red>( L 23 - 29 ) </font></h2></center>
-<!......................................................................................................>
+</table></center>
+<center><h3>Dec 28, 2019  CFP Fiesta Bowl vs. Clemson: 8:00 ESPN  <font color=red>( L 23 - 29 ) </font></h3></center>
 
+<!--......................................................................................................-->
 
 <h3>
 
-<hr align=center size=1 color=red>
+
+<hr />
 <center><A href="OSU/osu_seat.jpg">Ohio Stadium seating chart </A> </center>
 
-<hr align=center size=1 color=red>
-<!img align=bottom alt="New!" src="Images/new3.gif">
-
-
+<hr />
+<!--img align=bottom alt="New!" src="Images/new3.gif"-->
+<center>
 <a href="osu2020.html"> 2020 Football schedule </a>
 <p>
 <a href="osu2021.html"> 2021 Football schedule </a>
@@ -90,7 +88,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <p>
 <a href="osu2023.html"> 2023 Football schedule </a>
 <p>
-<hr align=center size=1 color=red>
+<hr />
 <a href="osu18.html"> 2018 Football results </a>
 <p>
 <a href="osu17.html"> 2017 Football results </a>
@@ -134,8 +132,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <a href="osu98.html"> 1998 Football results </a>
 <p>
 <a href="osu97.html"> 1997 Football results </a>
-<p>
-<center>
+<p></h3><hr />
+<center><h3><pre>
 Oh! Come let's sing Ohio's praise, 
 And songs to Alma Mater raise; 
 While our hearts rebounding thrill, 
@@ -162,14 +160,14 @@ If on seas of care we roll,
 'Neath blackened sky, o'er barren shoal, 
 Thoughts of thee bid darkness go, 
 Dear Alma Mater -- O hi o. 
-
-<p>
-Mens <a href="http://www.ohiostatebuckeyes.com/">  OSU Stuff </a>
-<hr align=center size=2 color=red>
+</pre></center></h3>
+<p><hr />
+<center>Mens <a href="http://www.ohiostatebuckeyes.com/">  OSU Stuff </a></center>
+<hr />
 <p align=center>
 <center><h2>Try these favorite <a href="dave_0.html"> sites </a></h2></center>
 
-<hr align=center size=2 color=red>
+<hr />
 
 <p align=center><img align=bottom alt="Mailbox" src="Images/an-email.gif">
 Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave </a>
@@ -177,5 +175,4 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <br></p>
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
-</body>
-</html>
+</bodyl>
