--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 </p>
 <center><img src="Images/an-dogrun.gif" alt="dogrun" ></center>
 <p>
-See our <A href="ccf.html"> "adopted" children </A>
+  <center>See our <A href="ccf.html"> "adopted" children </A></center>
 </p>
 
 <hr />
