--- a/osu2021.html
+++ b/osu2021.html
@@ -19,23 +19,23 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <!......................................................................................................>
 
 
-<center><h1> 2020 </h1><br></center>
+<center><h1> 2021 </h1><br></center>
 <table border="1" align="center" >
 
 
 
-<tr><td>Sep 05</td><td class="has-text-align-left" data-align="left">Bowling Green </td><td>TBA</td><td>W </td><td>note</td></tr>
-<tr><td>Sep 12</td><td class="has-text-align-left" data-align="left">@ Oregon      </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 19</td><td class="has-text-align-left" data-align="left">Buffalo       </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 26</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 10</td><td class="has-text-align-left" data-align="left">Iowa          </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 17</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td></td><td></td><td></td></tr>
-<tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">@ Penn state  </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">Indiana       </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">scUM          </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 04</td><td class="has-text-align-left" data-align="left">@ Minnesota   </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon        </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa         </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">Akron         </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">@ Nebraska    </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 16</td><td class="has-text-align-left" data-align="left">Purdue        </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Rutgers     </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Michigan State</td><td></td><td></td><td></td></tr>
+<tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Indiana     </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Maryland      </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Penn State    </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ scUM        </td><td></td><td></td><td></td></tr>
 
 <!-- /wp:table -->
 </table>
