--- a/buffy.html
+++ b/buffy.html
@@ -1,4 +1,4 @@
-<!--  Last Updated : Oct 19,1997 ->
+<!--  Last Updated : Oct 19,1997 -->
 
 <html>
 <!-- The following HTML tags are the header and title tags.  These tags allows you to specify a title for this page. -->
