--- a/dave_0.html
+++ b/dave_0.html
@@ -16,7 +16,7 @@ function navigate(form)
 </SCRIPT>
 <!---------------->
 <script Language="JavaScript">
-<!-- Hide me
+
 function gettheDate() {
         Todays = new Date();
         TheDate = "" + (Todays.getMonth()+ 1) +" / "+ Todays.getDate() + " / " + 
@@ -55,14 +55,14 @@ function showtime () {
 </script>
 
 </HEAD>
-<!BODY  background="Images/blutextb.gif" bgproperties="fixed" onLoad="startclock()">
+<!--BODY  background="Images/blutextb.gif" bgproperties="fixed" onLoad="startclock()"-->
 <BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" onLoad="startclock()">
-<!body bgcolor="#000000" text="Yellow" link="Lightblue" vlink="Red"  background="Images/blckstar.jpg" bgproperties="fixed" onLoad="startclock()">
-<!body bgcolor="#FFFFFF" link="#000000" vlink="#808080" onLoad="startclock()">
-<!body BGCOLOR="#A4C8F0" >
-<!body BGCOLOR="Lightblue" >
+<!--body bgcolor="#000000" text="Yellow" link="Lightblue" vlink="Red"  background="Images/blckstar.jpg" bgproperties="fixed" onLoad="startclock()"-->
+<!--body bgcolor="#FFFFFF" link="#000000" vlink="#808080" onLoad="startclock()"-->
+<!--body BGCOLOR="#A4C8F0" -->
+<!--body BGCOLOR="Lightblue" -->
 
-<p align=center>
+<p>
 <!-- LAST MODIFIED DATE -->
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
@@ -207,7 +207,6 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <A HREF="http://www.shutterfly.com/ "> Shutterfly </A> --
 
 <br>
-
 
 <hr>
 <A HREF="http://www.computer-memory-store.com/"> Computer Memory Store </A> --
