--- a/photoindex.html
+++ b/photoindex.html
@@ -44,30 +44,29 @@ Welcome to my photo page!</H1>
 <hr size=3 width=90%>
 <center>
 <UL>
-<LI><a href="sunroom.html" > 4Seasons Sunroom constructed July 1997</a>
-<LI><a href="alaska.html" > 1999 Alaska vacation pics </a>
-<LI><a href="dayton.html" > 1999 Air Force Museum trip with Marco </a>
-<LI><a href="prom.html" > Marco's 2000 Valley High School Prom </a>
-<LI><a href="bath.html" > New bathroom 2001(3 potties, no waiting...) </a>
-<LI><a href="1977vac.html" > Dave & Bruce's 1977 trip out West </a>
-<LI><a href="DaveAlbums.html" > Old photos from my albums </a>
-<LI><a href="LewisNorris.html" > Grandpa Norris' house 1999 </a>
-<LI><a href="Thanksgiving1999.html" > Thanksgiving 1999 </a>
-<LI><a href="Nelsonhouse.html" > Nelson & Jill's house 2001(?)</a>
-<LI><a href="Darlene.html" > Darlene's house </a>
-<LI><a href="Marco.html" > Marco 1999/2000</a>
-<LI><a href="Xmas2001.html" > Christmas 2001 </a>
-<LI><a href="USGrantBridge.html" > US Grant Bridge, going to be replaced June 2001-2004</a>
-<LI><a href="misc.html" > Miscellaneous 2000/2001</a>
-<LI><a href="CarlPerkinsBridge.html" > Carl Perkins Bridge 2002</a>
-<LI><a href="spring2002.html" > Spring 2002 </a>
-<LI><a href="Thanksgiving2002.html" > Thanksgiving 2002 </a>
-<LI><a href="Winter0203.html" > Winter 2002-2003 </a>
-<LI><a href="GenPics.html" > Genealogy pictures </a>
-<LI><a href="ROS35.html" > OH US 35 construction Feb 2004 </a>
-<LI><a href="Fall2007.html" > Fall 2007 </a>
-<LI><a href="Thanksgiving2009.html" > Thanksgiving 2009 </a>
-
+<LI><a href="sunroom.html" > 4Seasons Sunroom constructed July 1997</a></LI>
+<LI><a href="alaska.html" > 1999 Alaska vacation pics </a></LI>
+<LI><a href="dayton.html" > 1999 Air Force Museum trip with Marco </a></LI>
+<LI><a href="prom.html" > Marco's 2000 Valley High School Prom </a></LI>
+<LI><a href="bath.html" > New bathroom 2001(3 potties, no waiting...) </a></LI>
+<LI><a href="1977vac.html" > Dave & Bruce's 1977 trip out West </a></LI>
+<LI><a href="DaveAlbums.html" > Old photos from my albums </a></LI>
+<LI><a href="LewisNorris.html" > Grandpa Norris' house 1999 </a></LI>
+<LI><a href="Thanksgiving1999.html" > Thanksgiving 1999 </a></LI>
+<LI><a href="Nelsonhouse.html" > Nelson & Jill's house 2001(?)</a></LI>
+<LI><a href="Darlene.html" > Darlene's house </a></LI>
+<LI><a href="Marco.html" > Marco 1999/2000</a></LI>
+<LI><a href="Xmas2001.html" > Christmas 2001 </a></LI>
+<LI><a href="USGrantBridge.html" > US Grant Bridge, going to be replaced June 2001-2004</a></LI>
+<LI><a href="misc.html" > Miscellaneous 2000/2001</a></LI>
+<LI><a href="CarlPerkinsBridge.html" > Carl Perkins Bridge 2002</a></LI>
+<LI><a href="spring2002.html" > Spring 2002 </a></LI>
+<LI><a href="Thanksgiving2002.html" > Thanksgiving 2002 </a></LI>
+<LI><a href="Winter0203.html" > Winter 2002-2003 </a></LI>
+<LI><a href="GenPics.html" > Genealogy pictures </a></LI>
+<LI><a href="ROS35.html" > OH US 35 construction Feb 2004 </a></LI>
+<LI><a href="Fall2007.html" > Fall 2007 </a></LI>
+<LI><a href="Thanksgiving2009.html" > Thanksgiving 2009 </a></LI>
 
 </UL>
 </center>
