--- a/dave_0.html
+++ b/dave_0.html
@@ -84,9 +84,8 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <hr size=3 width=90%> 
 <center>
 <!--------------->
-<A href="http://www.intellicast.com/IcastPage/LoadPage.aspx?loc=kcmh&seg=LocalWeather&prodgrp=RadarImagery&product=Radar&prodnav=none"><!img src="Images/x.gif" border=0>Columbus Weather Radar </a>
+<A href="http://www.intellicast.com/IcastPage/LoadPage.aspx?loc=kcmh&seg=LocalWeather&prodgrp=RadarImagery&product=Radar&prodnav=none">Columbus Weather Radar </a>
 
-<A href="http://www.mirabilis.com/download/"><img src="Images/icqdownload.gif" border=0></a>
 <A href="http://www.historychannel.com/today/"><img height="80" width="260" src="Images/thisday.gif" border=0></a>
 <A href="index.html"> Index </a> --
 <A href="http://forums.the-ozone.net/"> O-Zone Fan Forum </a> --
@@ -96,12 +95,11 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <A href="http://ohiostatebuckeyes.com/"><img src="Images/osu.gif" border=0>Athletics Site</a>
 <br>
 <A HREF="webcam/webcam.html "> Dave webcam </A> --
-<A href="http://www.calsnet.net/dnorris"> <img src="Images/ical2.jpg" border=0> Norris Calendar</a> --
-<A HREF="http://vil.nai.com/vil/hoaxes.aspx"> Before you forward that virus notice.. Check this! </A>
+
 <p>
 
 <p align="center"><span style="background-color: #FFFF00">
-<A HREF="http://sciotocountyfair.org/"> Scioto County Fair Aug 8-13, 2011</A></span></p>
+<A HREF="http://sciotocountyfair.org/"> Scioto County Fair </A></span></p>
 <hr>
 <A HREF="https://www.aepohio.com/"> AEP Ohio </A> --
 <A HREF="https://www.aetna.com/"> Aetna Health </A> --
@@ -1232,7 +1230,7 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <td><a href="http://www.gateway.com"><img src="Images/gateway-logo.jpg" alt="Gateway Logo" border=0></a></td>
 <td></td>
 </tr><tr>
-<td><a href="http://www2.oregonscientific.com/shop/product.asp?cid=2&scid=84&pid=83"><img src="Images/WMR968_rg.jpg" height="140" width=140" alt="Weather Station" border=0 > </a></td>
+<td><a href="https://www.oregonscientificstore.com/c-7-weather-stations.aspx>" <img src="Images/WMR968_rg.jpg" height="140" width=140" alt="Weather Station" border=0 > </a></td>
 <td><a href="http://www.google.com/"><img src="Images/google-logo.gif" height="70" width=140" alt="Google search" border=0 > </a></td>
 <td><a href="http://www.whowhere.com"><img src="Images/whowherelogo.gif" alt="WhoWhere search" border=0 > </a></td>
 <td><A HREF="http://www.hotbot.com/"><IMG SRC="Images/hotbot1.gif" alt="HotBot Search" BORDER=0></A></td>
@@ -1252,8 +1250,6 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <OPTION value="http://www.webcrawler.com"> Web Crawler
 <OPTION value="http://www.whowhere.com"> Who Where
 <OPTION value="http://www.yahoo.com"> Yahoo
-<OPTION value="http://www.dejanews.com"> Deja News
-<OPTION value="http://www.softseek.com/"> SoftSeek
 <OPTION value="dave_1.html"> Dave_1
 <OPTION value="dave_2.html"> Dave_2
 <OPTION value="dave_3.html"> Dave_3
