--- a/dave_0.html
+++ b/dave_0.html
@@ -1229,7 +1229,7 @@ alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
 <td><a href="http://www.dot.state.oh.us/districts/D09"><img src="Images/d9.gif" alt="ODOT District 9" border=0 > </a></td>
 <td><a href="http://www.gateway.com"><img src="Images/gateway-logo.jpg" alt="Gateway Logo" border=0></a></td>
 </tr><tr>
-<td><a href="https://www.oregonscientificstore.com/c-7-weather-stations.aspx>" <img src="Images/WMR968_rg.jpg" height="140" width=140" alt="Weather Station" border=0 > </a></td>
+<td><a href="https://www.oregonscientificstore.com/c-7-weather-stations.aspx"> <img src="Images/WMR968_rg.jpg" height="140" width=140" alt="Weather Station" border=0 > </a></td>
 <td><a href="http://www.google.com/"><img src="Images/google-logo.gif" height="70" width=140" alt="Google search" border=0 > </a></td>
 <td><a href="http://www.whowhere.com"><img src="Images/whowherelogo.gif" alt="WhoWhere search" border=0 > </a></td>
 <td><A HREF="http://www.hotbot.com/"><IMG SRC="Images/hotbot1.gif" alt="HotBot Search" BORDER=0></A></td>
