--- a/dave_0.html
+++ b/dave_0.html
@@ -75,28 +75,22 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <hr size=3 width=90%> 
 <br>
 <center>
-<a href="http://www.wunderground.com/US/OH/Lucasville.html?bannertypeclick=miniStates">
-<img src="http://banners.wunderground.com/weathersticker/miniStates_both/language/www/US/OH/Lucasville.gif" border=0
-alt="Click for Lucasville, Ohio Forecast" height=100 width=150></a>
-<A HREF="wx/weather.html "> Dave's Weather station </A> --
-<A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's WUG station </A> --
+<A HREF="http://www.wunderground.com/weatherstation/WXDailyHistory.asp?ID=KOHLUCAS2 "> Dave's WeatherUnderGround station </A> --
+<A HREF="webcam/webcam.html "> Dave webcam </A> -- <A href="index.html"> Index </a> --
 </center>
 <hr size=3 width=90%> 
 <center>
 <!--------------->
-<A href="http://www.intellicast.com/IcastPage/LoadPage.aspx?loc=kcmh&seg=LocalWeather&prodgrp=RadarImagery&product=Radar&prodnav=none">Columbus Weather Radar </a>
+<A href="https://www.wunderground.com/maps/radar/current/day">Columbus Weather Radar </a>
 
 <A href="http://www.historychannel.com/today/"><img height="80" width="260" src="Images/thisday.gif" border=0></a>
-<A href="index.html"> Index </a> --
+
 <A href="http://forums.the-ozone.net/"> O-Zone Fan Forum </a> --
 
 <p>
 <A href="http://www.ohiostatebuckeyes.com/sports/m-baskbl/sched/osu-m-baskbl-sched.html"><img src="Images/osu.gif" border=0> OSU Basketball sched </a>
 <A href="http://ohiostatebuckeyes.com/"><img src="Images/osu.gif" border=0>Athletics Site</a>
 <br>
-<A HREF="webcam/webcam.html "> Dave webcam </A> --
-
-<p>
 
 <p align="center"><span style="background-color: #FFFF00">
 <A HREF="http://sciotocountyfair.org/"> Scioto County Fair </A></span></p>
