--- a/osuindex.html
+++ b/osuindex.html
@@ -24,42 +24,40 @@
 <center>
 To play, click on the link..
 To save to your disk, right-click, and select "Save Target as.."
+</center>
 
 <UL>
-<LI><a href="OSU/Salley_hit_Baas.mpg" > Salley knocks Baas bassackwards (1.9 MB) </a>
+<LI>Salley knocks Baas bassackwards (1.9 MB) <video src="OSU/Salley_hit_Baas.mp4" controls></video>
+<p></p>
+<LI> 1460 Fiesta Bowl Medley (11,239 KB) <audio src="OSU/FiestaBowlMedley1460.mp3" controls></audio>
+<p></p>
+<LI> Cie Grant sings Carmen Ohio (1,416 KB) <audio src="OSU/Cie-carmen_ohio.mp3" controls></audio>
+<p></p>
+<LI> WNCI 2002 Championship Song (4,212 KB)<audio src="OSU/2002CHAMPIONSHIPSONG-WNCI.mp3" controls></audio>
+<p></p>
+<LI> Purdue game - Krenzel to Jenkins - Holy Buckeyes! (775 KB) <audio src="OSU/Krenzel.mp3" controls></audio>
+</ul>
 
-<LI><a href="OSU/FiestaBowlMedley1460.mp3" > 1460 Fiesta Bowl Medley (11,239 KB) </a>
-<LI><a href="OSU/Cie-carmen_ohio.mp3" > Cie Grant sings Carmen Ohio (1,416 KB) </a>
-<LI><a href="OSU/2002CHAMPIONSHIPSONG-WNCI.mp3"> WNCI 2002 Championship Song (4,212 KB)</a>
-<LI><a href="OSU/Krenzel.mp3" > Purdue game - Krenzel to Jenkins - Holy Buckeyes! (775 KB) </a>
-</ul><p> Photos
+<p><center> <h2> Photos</h2><h4>
 <ul>
 <LI><img src="OSU/pregame.jpg" > TBDBITL marches on the field 9/8/01 </a>
 <LI><img src="OSU/Ohio_Stadium160.jpg" > Ohio Stadium (under reconstruction) </a>
 <LI><img src="OSU/osu2001seating.jpg" > Ohio Stadium seating chart </a>
 <LI><img src="OSU/OSU_37_21.jpg" > Buckeyes beat scUM again </a>
 <LI><img src="OSU/Salley_hit_Baas.jpg" > Salley hits Baas </a>
+</UL></h4>
 
-</UL>
 <p>
 <a href="http://www.sportsposterwarehouse.com/warehouse/osuchamps03ei.htm" > Link to the Fiesta poster </a>
 <p>
 <a href="http://www.osu.edu/wallpaper/" > Link to the OSU computer wallpaper </a>
 <p>
 <a href="http://bucknakid.buckeyefanatic.com/" > Link to OSU computer wallpaper </a>
-
-
-
-</center>
+</center>>
 </p><hr size=5>
-
-
-
 <!---------------------->
 <p align=center>  You can reach me by e-mail at:  
 <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave </a>
 
-
 </BODY>
 </HTML>
-
