--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <link rel="shortcut icon" href="favicon.ico"></link>
   </head>
   
-  <!-- <body style="background-color:gray;"> -->
-  <body background="dnorris.net/Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
-    
-    <!--BODY onunload="clearTimeout(bannerid)" background="Images/bg-paper.gif" BGCOLOR="#A4C8F0"
+  <body style="background-color:lightgray;"> 
+    <!--body background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
     <header>
       <nav>
       </nav>
@@ -29,17 +27,14 @@
     <footer>
     </footer>  
       <span>
-
       </span> (in-line)
       <div>
-
       </div> (block)
 
       <iframe src="https://whatever.com" width="1000" height="800">
       </iframe>
-
     -->
-    <!--  EXAMPLE -! img src="Images/constru1.gif"-->
+        
     <!-- LAST MODIFIED DATE -->
     <p align=center>
     <SCRIPT LANGUAGE="JavaScript">
@@ -191,5 +186,5 @@
     <br></p>
     <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
-  </body>
+  </!--body>-->
 </html>
